fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,13 @@
 body {
   padding-top: 70px;
-  padding-left: 70px;
-  padding-right: 70px;
+  padding-left: auto;
+  padding-right: auto;
 }
 
 h3 {
   text-align: center;
+}
+
+.card-header {
+  font-weight: bold;
 }
